--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </div>
 
   <div id="message"></div>
+  <div id="animal-container"></div>
 
   <audio autoplay loop>
     <source src="music/background.mp3" type="audio/mpeg">
@@ -25,5 +26,3 @@
 
   <script src="script.js"></script>
 </body>
-
-</html>
